[package]
name = "swapspace-api"
version = "0.1.0"
edition = "2021"
authors = ["Marat Safin <me@maratsafin.dev>"]
description = "Swapspace API client"
repository = "https://github.com/jeizsm/swapspace-api"
license = "MIT"
keywords = ["swapspace", "api"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
chrono = "0.4.38"
envconfig = "0.10.0"
log = { version = "0.4.22", optional = true }
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
url = "2.5.2"

[features]
log = ["dep:log"]

[dev-dependencies]
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
